[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scenes/SceneScripts/InteractiveTutorial.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/UI/UI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Paricles/RoundParicle.png" type="Texture" id=4]
[ext_resource path="res://Assets/Ground.png" type="Texture" id=5]
[ext_resource path="res://Assets/Wall.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sidebar_entrance.png" type="Texture" id=7]
[ext_resource path="res://Assets/Lightray.png" type="Texture" id=8]
[ext_resource path="res://Assets/Outside2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Pipes2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Poster.png" type="Texture" id=11]
[ext_resource path="res://Assets/Pipes1.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sidebar_background.png" type="Texture" id=13]
[ext_resource path="res://Assets/Outside.png" type="Texture" id=14]
[ext_resource path="res://Prefabs/Student/Assets/Students_Spritesheet_blinking.png" type="Texture" id=15]
[ext_resource path="res://Prefabs/Student/Assets/Laptop.png" type="Texture" id=16]
[ext_resource path="res://Assets/Shadow.png" type="Texture" id=17]
[ext_resource path="res://Prefabs/Student/Assets/Students_Spritesheet_special.png" type="Texture" id=18]
[ext_resource path="res://Prefabs/Student/Assets/Students_Spritesheet.png" type="Texture" id=19]
[ext_resource path="res://Prefabs/Student/Assets/Table.png" type="Texture" id=20]
[ext_resource path="res://Prefabs/Student/TutorialStudent.gd" type="Script" id=21]
[ext_resource path="res://Assets/UI/Tutorial.png" type="Texture" id=22]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 660, 20 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 91.25, 345 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 105, 345 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 660.001, 36.25 )

[sub_resource type="QuadMesh" id=1]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11, 8.5 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.258427, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.707865, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0875 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=13]
lifetime_randomness = 0.48
emission_shape = 2
emission_box_extents = Vector3( 200, 150, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 4.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = -99.8
angle_random = 0.26
scale = 0.15
scale_curve = SubResource( 7 )
color = Color( 1, 0.960784, 0.839216, 0.623529 )

[node name="InteractiveTutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 257, 150 )
current = true

[node name="UI2" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true

[node name="Background" type="Node2D" parent="."]

[node name="Floor" type="TextureRect" parent="Background"]
margin_left = 79.0
margin_top = 2.99998
margin_right = 971.0
margin_bottom = 799.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
stretch_mode = 2

[node name="Wall" type="TextureRect" parent="Background"]
margin_left = 78.0
margin_top = -2.0
margin_right = 1867.0
margin_bottom = 155.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )
stretch_mode = 2

[node name="HallFloor" type="TextureRect" parent="Background"]
margin_left = -7.0
margin_right = 423.0
margin_bottom = 1637.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 13 )
stretch_mode = 2

[node name="Pipes1" type="Sprite" parent="Background"]
position = Vector2( 201, 11 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 12 )

[node name="Pipes2" type="Sprite" parent="Background/Pipes1"]
position = Vector2( -590, 475 )
texture = ExtResource( 10 )

[node name="Pipes3" type="Sprite" parent="Background/Pipes1"]
position = Vector2( -590, 945 )
texture = ExtResource( 10 )

[node name="RoomOuterCollsions" type="StaticBody2D" parent="Background"]
scale = Vector2( 0.4, 0.4 )

[node name="Upper" type="CollisionShape2D" parent="Background/RoomOuterCollsions"]
visible = false
position = Vector2( 650, 55 )
shape = SubResource( 8 )

[node name="Left" type="CollisionShape2D" parent="Background/RoomOuterCollsions"]
visible = false
position = Vector2( 108.75, 422.5 )
shape = SubResource( 9 )

[node name="Right" type="CollisionShape2D" parent="Background/RoomOuterCollsions"]
visible = false
position = Vector2( 1187.5, 425 )
shape = SubResource( 10 )

[node name="Bottom" type="CollisionShape2D" parent="Background/RoomOuterCollsions"]
visible = false
position = Vector2( 650, 773.75 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 11 )

[node name="Poster" type="Sprite" parent="Background"]
modulate = Color( 0.592157, 0.592157, 0.592157, 1 )
position = Vector2( 345, 16 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 11 )

[node name="WASD" type="Sprite" parent="Background"]
unique_name_in_owner = true
position = Vector2( 149, 244 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 22 )
region_enabled = true
region_rect = Rect2( 0, 0, 220.446, 115.431 )

[node name="ENTER" type="Sprite" parent="Background"]
unique_name_in_owner = true
position = Vector2( 247, 186 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 22 )
region_enabled = true
region_rect = Rect2( 211.53, 0, 110.139, 109.314 )

[node name="Room" type="YSort" parent="."]

[node name="Timer" type="Timer" parent="Room"]
unique_name_in_owner = true

[node name="Students" type="YSort" parent="Room"]
unique_name_in_owner = true
position = Vector2( 66, 1 )
scale = Vector2( 0.8, 0.8 )

[node name="Student5" type="StaticBody2D" parent="Room/Students"]
position = Vector2( 240, 180 )
scale = Vector2( 2, 2 )
script = ExtResource( 21 )

[node name="Shadow" type="Sprite" parent="Room/Students/Student5"]
modulate = Color( 1, 1, 1, 0.588235 )
position = Vector2( 0, 13.5 )
scale = Vector2( 0.12, 0.187 )
texture = ExtResource( 17 )

[node name="Chair" type="MeshInstance2D" parent="Room/Students/Student5"]
modulate = Color( 0.215686, 0.152941, 0.152941, 1 )
position = Vector2( 0, -4 )
scale = Vector2( 12.5, 8.5 )
mesh = SubResource( 1 )

[node name="Person" type="Sprite" parent="Room/Students/Student5"]
position = Vector2( 0, -5.5 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 19 )
hframes = 9
frame = 1

[node name="PersonBlinking" type="Sprite" parent="Room/Students/Student5"]
visible = false
position = Vector2( 0, -5.5 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 15 )
hframes = 9

[node name="SpecialSprite" type="Sprite" parent="Room/Students/Student5"]
visible = false
position = Vector2( 0, -5.5 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 18 )
hframes = 9

[node name="Table" type="Sprite" parent="Room/Students/Student5"]
position = Vector2( 0, 8.5 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Room/Students/Student5"]
visible = false
position = Vector2( 0, 8.5 )
shape = SubResource( 4 )

[node name="Laptop" type="Sprite" parent="Room/Students/Student5"]
position = Vector2( -1.5, 4.5 )
scale = Vector2( 0.12, 0.12 )
texture = ExtResource( 16 )

[node name="BlinkTimer" type="Timer" parent="Room/Students/Student5"]

[node name="Player" parent="Room" instance=ExtResource( 3 )]
unique_name_in_owner = true
position = Vector2( 103, 240 )

[node name="Particles2D" type="Particles2D" parent="."]
pause_mode = 2
position = Vector2( 249, 149 )
amount = 50
lifetime = 10.0
preprocess = 22.02
process_material = SubResource( 13 )
texture = ExtResource( 4 )

[node name="Outside4" type="Node2D" parent="."]

[node name="WallLeft" type="ColorRect" parent="Outside4"]
margin_left = 76.0
margin_right = 80.0
margin_bottom = 326.0
color = Color( 0, 0, 0, 1 )

[node name="WallRight" type="ColorRect" parent="Outside4"]
margin_left = 432.0
margin_top = 1.52588e-05
margin_right = 441.0
margin_bottom = 327.0
color = Color( 0, 0, 0, 1 )

[node name="Lightrays" type="Node2D" parent="Outside4"]

[node name="Lightray" type="Sprite" parent="Outside4/Lightrays"]
modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 340, 46 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 8 )
flip_h = true

[node name="Lightray2" type="Sprite" parent="Outside4/Lightrays"]
modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 340, 134 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 8 )
flip_h = true

[node name="Lightray3" type="Sprite" parent="Outside4/Lightrays"]
modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 340, 223 )
scale = Vector2( 0.33, 0.33 )
texture = ExtResource( 8 )
flip_h = true

[node name="Grass" type="Sprite" parent="Outside4"]
position = Vector2( 490, 74 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 14 )

[node name="Grass2" type="Sprite" parent="Outside4"]
position = Vector2( 491, -14 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="Grass3" type="Sprite" parent="Outside4"]
position = Vector2( 490, 163 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 14 )

[node name="Grass4" type="Sprite" parent="Outside4"]
position = Vector2( 490, 252 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 14 )

[node name="Grass5" type="Sprite" parent="Outside4"]
position = Vector2( 491, 340 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="Door" type="Sprite" parent="Outside4"]
position = Vector2( 76.214, 235.58 )
scale = Vector2( 0.247, 0.205 )
texture = ExtResource( 7 )
flip_v = true

[node name="Items" type="Node2D" parent="."]

[node name="ItemTimer" type="Timer" parent="."]
